--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+// https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.8.0'
 
 }
 
