--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
+include 'kodilla-stream'
+include 'kodilla-stream:com.kodilla.stream'
+findProject(':kodilla-stream:com.kodilla.stream')?.name = 'com.kodilla.stream'
+include 'kodilla-rps'
+include 'kodilla-exception'
 
