--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'kodilla-stream:com.kodilla.stream'
 findProject(':kodilla-stream:com.kodilla.stream')?.name = 'com.kodilla.stream'
 include 'kodilla-rps'
 include 'kodilla-exception'
+include 'kodilla-good-patterns'
 
