--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,6 @@ findProject(':kodilla-stream:com.kodilla.stream')?.name = 'com.kodilla.stream'
 include 'kodilla-rps'
 include 'kodilla-exception'
 include 'kodilla-good-patterns'
+include 'kodilla-spring-intro'
+include 'kodilla-spring'
 
