--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-hibernate1'
+include 'kodilla-patterns'
 
