--- a/kodilla-hibernate/src/main/resources/application.properties
+++ b/kodilla-hibernate/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=q1w2e3r4
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.ddl-auto=create-drop
