--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.mysql:mysql-connector-j:8.0.33'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 
